--- a/src/app/best-selling/best-selling.component.html
+++ b/src/app/best-selling/best-selling.component.html
@@ -7,8 +7,8 @@
     </ol>
     <div class="carousel-inner">
       <div class="carousel-item active">
-        <div class="row">
-          <div class="col-xs-4">
+        <div class="row p-2">
+          <div class="col-xs-4 p-1">
             <div class="card" style="width: 18rem;">
               <div class="card-body">
                 <h5 class="card-title">Card title</h5>
@@ -20,7 +20,7 @@
               </div>
             </div>
           </div>
-          <div class="col-xs-4">
+          <div class="col-xs-4 p-1">
             <div class="card" style="width: 18rem;">
               <div class="card-body">
                 <h5 class="card-title">Card title</h5>
@@ -32,7 +32,7 @@
               </div>
             </div>
           </div>
-          <div class="col-xs-4">
+          <div class="col-xs-4 p-1">
             <div class="card" style="width: 18rem;">
               <div class="card-body">
                 <h5 class="card-title">Card title</h5>
