--- a/src/app/homepage/homepage.component.css
+++ b/src/app/homepage/homepage.component.css
@@ -40,3 +40,11 @@ hr{
     font-size: 2rem;
     font-weight: 100;
 }
+
+.card{
+    transition: all 0.2s;
+}
+
+.card:hover{
+    box-shadow: 0 1rem 3rem rgba(0,0,0,.175)!important;
+}
