--- a/src/app/detail-phone/detail-phone.component.css
+++ b/src/app/detail-phone/detail-phone.component.css
@@ -18,3 +18,7 @@
     background: rgba(58, 133, 191, 0.75);
     border: 2px solid rgba(58, 133, 191, 0.75);
   }
+
+  i{
+    color: rgba(58, 133, 191, 0.75);
+  }
