--- a/src/app/all-phones/all-phones.component.html
+++ b/src/app/all-phones/all-phones.component.html
@@ -1,7 +1,7 @@
 <div style="text-align:center">
   <div class="container">
     <div class="row">
-      <div class="col-12 col-md-6 col-lg-3 p-2" *ngFor="let phone of mobilePhones">
+      <div class="col-12 col-md-6 col-lg-3 p-2" *ngFor="let phone of mobilePhones" [routerLink]="['/mobilePhone', phone.mobileId]">
         <!-- Card -->
         <div class="card">
           <!-- Card image -->
@@ -20,7 +20,7 @@
               <span>{{phone.mobilePrice}}</span>
             </span>
             <span class="float-right">
-              <a href="#!" class=" btn btn-info" ng-click="addToBasket(id,quantity,price)">
+              <a [routerLink]="['/mobilePhone', phone.mobileId]" class=" btn btn-info" ng-click="addToBasket(id,quantity,price)">
                 <span>
                   <i class="lnr lnr-cart"></i>
                 </span> Add to Cart</a>
