--- a/src/app/homepage/homepage.component.html
+++ b/src/app/homepage/homepage.component.html
@@ -6,41 +6,4 @@
     </div>
   </div>
 </div>
-<!-- <app-best-selling></app-best-selling> -->
-<div class="">
-  <div style="text-align:center">
-    <div class="container">
-      <div class="display-4 p-2 text-left">Best Selling</div>
-
-      <div class="row">
-        <div class="col" *ngFor="let phone of mobilePhones" (click)="loadDetailMobilePhone(phone)">
-          <!-- Card -->
-          <div class="card">
-            <!-- Card image -->
-            <div class="view overlay">
-              <img class="img-thumbnail" src="{{ phone.mobileImage}}" alt="Card image cap">
-
-            </div>
-            <div class="card-body">
-              <a href="#!" style="text-decoration: none; color:#2572C8;">{{phone.mobileName}}
-                <!-- <div class="mask rgba-white-slight" ></div> -->
-              </a>
-              <!-- <h5 class="">{{phone.mobileName}}</h5> -->
-            </div>
-            <div class="card-footer text-muted  ng-scope" ng-controller="myContrl" ng-init="id=3;quantity=4;price=150">
-              <span class="float-center mt-1">
-                <span>{{phone.mobilePrice}}</span>
-              </span>
-              <span class="float-right">
-                <a href="#!" class=" btn btn-info" ng-click="addToBasket(id,quantity,price)">
-                  <span>
-                    <i class="lnr lnr-cart"></i>
-                  </span> Add to Cart</a>
-              </span>
-            </div>
-          </div>
-        </div>
-      </div>
-    </div>
-  </div>
-</div>
+<app-best-selling></app-best-selling>
