Implemented Login Handling token by placing token in local storage and user id error handling signin up page created

--- a/src/app/detail-phone/detail-phone.component.html
+++ b/src/app/detail-phone/detail-phone.component.html
@@ -34,7 +34,7 @@
             £{{phonePrice}}
           </span>
         </p>
-        <button type="button" class="btn btn-primary font-weight-bold text-center text-uppercase shadow-lg" (click)="addToBasket(phone)">Add
+        <button type="button" class="btn btn-primary font-weight-bold text-center text-uppercase shadow-lg" (click)="addToBasket()">Add
           to basket</button>
 
       </div>
