--- a/src/app/homepage/homepage.component.html
+++ b/src/app/homepage/homepage.component.html
@@ -6,4 +6,16 @@
     </div>
   </div>
 </div>
-<app-best-selling></app-best-selling>
+
+
+<div class="p-2">
+  <app-best-selling></app-best-selling>
+</div>
+
+<div class="p-2">
+  <app-mostly-wished></app-mostly-wished>
+</div>
+
+<div class="p-2">
+  <app-mostly-reviewed></app-mostly-reviewed>
+</div>
