--- a/src/app/all-phones/all-phones.component.html
+++ b/src/app/all-phones/all-phones.component.html
@@ -17,7 +17,7 @@
           </div>
           <div class="card-footer text-muted  ng-scope" ng-controller="myContrl" ng-init="id=3;quantity=4;price=150">
             <span class="float-left mt-2">
-              <span>{{phone.mobilePrice}}</span>
+              <span>£{{phone.mobilePrice}}</span>
             </span>
             <span class="float-right">
               <a [routerLink]="['/mobilePhone', phone.mobileId]" class=" btn btn-info" ng-click="addToBasket(id,quantity,price)">
