--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -26,8 +26,28 @@
           <a class="nav-link" routerLink="/allPhones">All Phones</a>
         </li>
         <li class="nav-item">
+          <a class="nav-link" routerLink="/userDashboard">My orders</a>
+        </li>
+        <li class="nav-item">
           <a class="nav-link" routerLink="/test">About</a>
         </li>
+
+
+        <!-- <li class="nav-item" *ngIf="_loginService.isLoggedIn()">
+          <a class="nav-link" (click)="signOut()" routerLink="/home">Sign Out</a>
+        </li> -->
+      </ul>
+      <ul class="navbar-nav ml-auto">
+        <li class="nav-item">
+          <a class="nav-link" routerLink="/register">Register</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" routerLink="/login">Login</a>
+        </li>
+        <!-- <li class="nav-item" *ngIf="_loginService.isLoggedIn()">
+          <a class="nav-link" routerLink="/myProfile">My Profile</a>
+        </li> -->
+
         <!-- <li class="nav-item" *ngIf="_loginService.isLoggedIn()">
           <a class="nav-link" (click)="signOut()" routerLink="/home">Sign Out</a>
         </li> -->
