--- a/src/app/user-dashboard/user-dashboard.component.html
+++ b/src/app/user-dashboard/user-dashboard.component.html
@@ -1,3 +1,174 @@
-<p>
-  user-dashboard works!
-</p>
+<div class="container mt-2 mb-2">
+  <ul class="nav nav-tabs" id="myTab" role="tablist">
+    <li class="nav-item">
+      <a class="nav-link active" id="contact-tab" data-toggle="tab" href="#contact" role="tab" aria-controls="contact"
+        aria-selected="false">My Profile</a>
+    </li>
+    <li class="nav-item">
+      <a class="nav-link " id="home-tab" data-toggle="tab" href="#myOrdersContent" role="tab" aria-controls="home"
+        aria-selected="true" (click)="getOrders()">Orders</a>
+    </li>
+    <li class="nav-item">
+      <a class="nav-link" id="profile-tab" data-toggle="tab" href="#profile" role="tab" aria-controls="profile"
+        aria-selected="false" (click)="getWishedItems()">Wished Items</a>
+    </li>
+
+  </ul>
+  <div class="tab-content" id="nav-tabContent">
+    <div class="tab-pane fade show active" id="contact" role="tabpanel" aria-labelledby="contact-tab">
+      <div class="container pt-3">
+        <div class="row">
+          <div class="col-md-9">
+            <div class="panel panel-default">
+              <div class="panel-body">
+                <div class="row">
+                  <div class="col-md-12 lead">User profile
+                    <hr>
+                  </div>
+                </div>
+                <div class="row">
+                  <div class="col-md-4 text-center">
+                    <img class="img-circle avatar avatar-original" style="-webkit-user-select:none; 
+                        display:block; margin:auto;"
+                      src="http://robohash.org/sitsequiquia.png?size=120x120">
+                    <div class="p-2">
+                      <label class="btn btn-primary p-2">
+                        Change Picture
+                        <input type="file" style="display: none;">
+                      </label>
+                    </div>
+                  </div>
+
+                  <div class="col-md-8">
+                    <div class="row">
+                      <div class="col-md-12">
+                        <h2 class="">Username: {{ myUsername }}</h2>
+                      </div>
+                    </div>
+                    <div class="row">
+                      <div class="col-md-6">
+                        <span class="text-muted">Email:{{ myEmail }}</span>
+                        <br>
+                        <br>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+                <div class="row">
+                  <div class="col-md-12">
+                    <hr>
+                    <button class="btn btn-default pull-right" data-toggle="modal" data-target="#editUserDataModal">
+                      <i class="glyphicon glyphicon-pencil"></i> Edit</button>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <div class="tab-pane fade " id="myOrdersContent" role="tabpanel" aria-labelledby="home-tab">
+      <div class="container text-center">
+        <div class="row" *ngIf="orders?.length > 0 ; else noOrders">
+          <div class="col-6 col-md-4 pt-2 pb-2" *ngFor="let  order of orders">
+            <div class="card">
+              <div class="card-header text-primary" [routerLink]="['/mobilePhone', order.mobileId]">
+                {{order.mobileName}}
+              </div>
+              <div class="view overlay">
+                <img class="img-thumbnail" src="{{ order.mobileImageUrl}}" alt="Card image cap">
+              </div>
+              <div class="card-body">
+                <span class="text-primary font-weight-light ">£{{order.mobilePrice}}</span>
+                <div>
+                  <a class=" btn btn-info text-white" [routerLink]="['/mobilePhone', order.mobileId]">Buy Again
+                  </a>
+                </div>
+              </div>
+              <div class="card-footer text-muted  ng-scope" ng-controller="myContrl" ng-init="id=3;quantity=4;price=150">
+                <p>Ordered on: {{order.orderedAt}}</p>
+              </div>
+            </div>
+          </div>
+        </div>
+        <ng-template #noOrders>
+          <div class="container">
+            <h5 class=display-4>No Orders placed =(</h5>
+          </div>
+        </ng-template>
+      </div>
+    </div>
+
+    <div class="tab-pane fade" id="profile" role="tabpanel" aria-labelledby="profile-tab">
+      <div class="container text-center">
+        <div class="row" *ngIf="wishedItems?.length > 0 ; else noWishedItems">
+          <div class="col-6 col-md-4 pt-2 pb-2" *ngFor="let item of wishedItems">
+            <div class="card">
+              <div class="card-header text-primary" [routerLink]="['/mobilePhone', item.mobileId]">
+                {{item.mobileName}}
+              </div>
+              <div class="view overlay">
+                <img class="img-thumbnail" src="{{ item.mobileImageUrl}}" alt="Card image cap">
+              </div>
+              <div class="card-body">
+                <span class="text-primary font-weight-light ">{{item.mobilePrice}}</span>
+                <div>
+                  <a class=" btn btn-info text-white" [routerLink]="['/mobilePhone', item.mobileId]">Buy Again
+                  </a>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+        <ng-template #noWishedItems>
+          <div class="container">
+            <h5 class=display-4>No wished Items =(</h5>
+          </div>
+        </ng-template>
+      </div>
+    </div>
+
+  </div>
+</div>
+
+<div #editUserDataModal class="modal fade" data-keyboard="false" data-backdrop="static" id="editUserDataModal" tabindex="-1"
+  role="dialog" aria-labelledby="editUserDataModal" aria-hidden="true">
+  <div class="modal-dialog" role="document">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5 class="modal-title" id="exampleModalLabel">Update profile</h5>
+      </div>
+      <div class="modal-body">
+        <div class="">
+          <h2>Edit you information</h2>
+
+          <div class="p-3">
+            <form (ngSubmit)="update(myUsername)" #userReLoginForm="ngForm">
+              <div class="form-group">
+                <label for="name">Username</label>
+                <input type="text" class="form-control" required [(ngModel)]="myUsername" name="myUsername" #username="ngModel">
+                <div [hidden]="username.valid || username.pristine" class="alert alert-danger">
+                  Username is required
+                </div>
+              </div>
+
+            </form>
+
+          </div>
+        </div>
+
+      </div>
+
+      <div class="modal-footer">
+
+        <!-- <button type="button" class="btn btn-secondary" (click)="signOut()" data-dismiss="modal">Log Out</button> -->
+        <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+
+        <button (click)="updateProfile()" class="btn btn-success" data-dismiss="modal" [disabled]="!userReLoginForm.form.valid">Update</button>
+
+        <!-- <button type="button" class="btn btn-primary">Log In</button> -->
+      </div>
+    </div>
+  </div>
+</div>
