--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -25,8 +25,8 @@
         <li class="nav-item">
           <a class="nav-link" routerLink="/allPhones">All Phones</a>
         </li>
-        <li class="nav-item">
-          <a class="nav-link" routerLink="/userDashboard">My orders</a>
+        <li class="nav-item" *ngIf="loginService.isLoggedIn()">
+          <a class="nav-link" routerLink="/userDashboard">Dashboard</a>
         </li>
         <li class="nav-item">
           <a class="nav-link" routerLink="/test">About</a>
@@ -38,19 +38,19 @@
         </li> -->
       </ul>
       <ul class="navbar-nav ml-auto">
-        <li class="nav-item">
+        <li class="nav-item" *ngIf="!loginService.isLoggedIn()">
           <a class="nav-link" routerLink="/register">Register</a>
         </li>
-        <li class="nav-item">
+        <li class="nav-item" *ngIf="!loginService.isLoggedIn()">
           <a class="nav-link" routerLink="/login">Login</a>
         </li>
-        <!-- <li class="nav-item" *ngIf="_loginService.isLoggedIn()">
-          <a class="nav-link" routerLink="/myProfile">My Profile</a>
-        </li> -->
+        <li class="nav-item" *ngIf="loginService.isLoggedIn()">
+          <a class="nav-link" routerLink="/myProfile">Basket</a>
+        </li>
 
-        <!-- <li class="nav-item" *ngIf="_loginService.isLoggedIn()">
+        <li class="nav-item" *ngIf="loginService.isLoggedIn()">
           <a class="nav-link" (click)="signOut()" routerLink="/home">Sign Out</a>
-        </li> -->
+        </li>
       </ul>
     </div>
   </div>
