Seperate service was implemented for basket, called as basket seervice. adds product to basket table in mongodb

--- a/src/app/all-phones/all-phones.component.html
+++ b/src/app/all-phones/all-phones.component.html
@@ -10,7 +10,7 @@
 
           </div>
           <div class="card-body">
-            <a href="#!" style="text-decoration: none; color:#2572C8;">{{phone.mobileName}}
+            <a [routerLink]="['/mobilePhone', phone.mobileId]" style="text-decoration: none; color:#2572C8;">{{phone.mobileName}}
               <!-- <div class="mask rgba-white-slight" ></div> -->
             </a>
             <!-- <h5 class="">{{phone.mobileName}}</h5> -->
