--- a/src/app/best-selling/best-selling.component.html
+++ b/src/app/best-selling/best-selling.component.html
@@ -23,7 +23,7 @@
               <span>{{phone.mobilePrice}}</span>
             </span>
             <span class="float-right">
-              <a class=" btn btn-info text-white" ng-click="addToBasket(id,quantity,price)">
+              <a [routerLink]="['/mobilePhone', phone.mobileId]" class=" btn btn-info text-white" ng-click="addToBasket(id,quantity,price)">
                 <span>
                   <i class="lnr lnr-cart"></i>
                 </span> Select Phone</a>
