--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -45,7 +45,8 @@
           <a class="nav-link" routerLink="/login">Login</a>
         </li>
         <li class="nav-item" *ngIf="loginService.isLoggedIn()">
-          <a class="nav-link" routerLink="/basket">Basket</a>
+          <a class="nav-link" routerLink="/basket">My Basket
+            <span class="badge badge-light">{{noOfItemsInBasket}}</span></a>
         </li>
 
         <li class="nav-item" *ngIf="loginService.isLoggedIn()">
