--- a/src/app/best-selling/best-selling.component.html
+++ b/src/app/best-selling/best-selling.component.html
@@ -9,7 +9,7 @@
         <div class="card">
           <!-- Card image -->
           <div class="view overlay">
-            <img class="img-thumbnail" src="{{ phone.mobileImage}}" alt="Card image cap">
+            <img class="img-thumbnail" src="{{ phone.mobileImageUrl}}" alt="Card image cap">
 
           </div>
           <div class="card-body">
