--- a/src/app/detail-phone/detail-phone.component.html
+++ b/src/app/detail-phone/detail-phone.component.html
@@ -42,7 +42,8 @@
         </p>
         <button type="button" class="btn btn-primary font-weight-bold text-center text-uppercase shadow-lg" (click)="addToBasket()">Add
           to basket</button>
-
+        <button type="button" class="btn btn-primary font-weight-bold text-center text-uppercase shadow-lg" (click)="addToWishList(phone.mobileId)">Add
+          to wish list</button>
       </div>
     </div>
     <div class="shadow p-3 mb-5 bg-light rounded">
