--- a/src/app/basket/basket.component.html
+++ b/src/app/basket/basket.component.html
@@ -1,8 +1,34 @@
 <!-- <div class="tab-pane fade" id="profile" role="tabpanel" aria-labelledby="profile-tab"> -->
 <div class="container text-center">
+  <div *ngIf="success?.length >0 ;">
+    <div class="alert alert-success" role="alert">
+      {{success}}
+    </div>
+  </div>
+  <h3 class="font-italic font-weight-normal">My Basket</h3>
+
   <div class="row" *ngIf="basketItems?.length > 0 ; else noItems">
     <div class="col-6 col-md-4 pt-2 pb-2" *ngFor="let item of basketItems">
+
       <div class="card">
+        <div class="row no-gutters m-1">
+          <div class="col-auto">
+            <img src="{{ item.mobileImageUrl}}" class="img-thumbnail" alt="">
+          </div>
+          <div class="col">
+            <div class="card-block pt-2 text-info">
+              <a [routerLink]="['/mobilePhone', item.mobileId]" class="card-text font-weight-light">{{item.mobileName}}</a>
+              <p class="card-text">£{{item.mobilePrice}}</p>
+              <a class="btn btn-primary text-white" (click)="showConfirmation(item)">Buy Now</a>
+            </div>
+          </div>
+        </div>
+        <div class="card-footer w-100 text-muted">
+          On Stock!
+        </div>
+      </div>
+
+      <!-- <div class="card">
         <div class="card-header text-primary" [routerLink]="['/mobilePhone', item.mobileId]">
           {{item.mobileName}}
         </div>
@@ -16,7 +42,8 @@
             </a>
           </div>
         </div>
-      </div>
+      </div> -->
+
     </div>
   </div>
   <ng-template #noItems>
@@ -26,3 +53,38 @@
   </ng-template>
 </div>
 <!-- </div> -->
+
+
+<div class="modal fade" tabindex="-1" role="dialog" id="confirmationModal">
+  <div class="modal-dialog" role="document">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5 class="modal-title">Confirmation</h5>
+        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+          <span aria-hidden="true">&times;</span>
+        </button>
+      </div>
+      <div class="modal-body">
+        <div class="card">
+          <div class="row no-gutters m-1">
+            <div class="col-auto">
+              <img src="{{ itemToOrder.mobileImageUrl}}" class="img-thumbnail" alt="">
+            </div>
+            <div class="col">
+              <div class="card-block pt-2 text-info">
+                <a class="card-text text-center font-weight-light">{{itemToOrder.mobileName}}</a>
+                <p class="card-text text-center">£{{itemToOrder.mobilePrice}}</p>
+                <!-- <a class="btn btn-primary text-white" (click)="show(item)">Buy Now</a> -->
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+        <button type="button" class="btn btn-primary" (click)="orderPhone()">Place Order</button>
+      </div>
+    </div>
+  </div>
+</div>
+<app-re-login></app-re-login>
