--- a/src/app/basket/basket.component.html
+++ b/src/app/basket/basket.component.html
@@ -65,7 +65,7 @@
         </button>
       </div>
       <div class="modal-body">
-        <div class="card">
+        <div class="card" *ngIf="itemToOrder">
           <div class="row no-gutters m-1">
             <div class="col-auto">
               <img src="{{ itemToOrder.mobileImageUrl}}" class="img-thumbnail" alt="">
