--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -1,4 +1,4 @@
-<nav class="navbar navbar-expand-lg sticky-top navbar navbar-dark bg-primary">
+<nav class="navbar navbar-expand-lg sticky-top navbar navbar-dark bg-primary shadow-lg p-3">
   <div class="container">
     <a class="navbar-brand" href="#">
       Angular Store
