--- a/src/app/re-login/re-login.component.html
+++ b/src/app/re-login/re-login.component.html
@@ -6,7 +6,7 @@
   <div class="modal-dialog" role="document">
     <div class="modal-content">
       <div class="modal-header">
-        <h5 class="modal-title" id="exampleModalLabel">Session Expired</h5>
+        <h5 class="modal-title" id="exampleModalLabel">Log In</h5>
       </div>
       <div class="modal-body">
         <div class="">
