--- a/src/app/register/register.component.html
+++ b/src/app/register/register.component.html
@@ -1,3 +1,64 @@
-<p>
-  register works!
-</p>
+<div class="container" style="height:80vh">
+  <div class="text-center">
+    <h4>Sign Up</h4>
+    <form (ngSubmit)="submitUser()" #userLoginForm="ngForm">
+      <div class="row">
+        <div class="col">
+          <div class="form-group">
+            <label for="username">Name*</label>
+            <input type="text" class="form-control" id="username" required [(ngModel)]="model.name" name="name" #name="ngModel">
+            <div [hidden]="name.valid || name.pristine" class="alert alert-danger">
+              Name is required
+            </div>
+          </div>
+        </div>
+        <div class="col">
+          <div class="form-group">
+            <label for="email">Email*</label>
+            <input type="text" class="form-control" id="email" required [(ngModel)]="model.userEmail" name="userEmail"
+              #userEmail="ngModel">
+            <div [hidden]="userEmail.valid || userEmail.pristine" class="alert alert-danger">
+              Email is required
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="row">
+        <div class="col">
+          <div class="form-group">
+            <label for="password">Password*</label>
+            <input type="password" class="form-control" id="password" required [(ngModel)]="model.password" name="password"
+              #password="ngModel" (keyup)="onKey()">
+            <div [hidden]="password.valid || password.pristine" class="alert alert-danger">
+              Password is required
+            </div>
+          </div>
+        </div>
+        <div class="col">
+          <div class="form-group">
+            <label for="password">Retype Password*</label>
+            <input type="password" class="form-control" id="password2" required [(ngModel)]="model.password2" name="password2"
+              #password2="ngModel" (keyup)="onKey()">
+            <div [hidden]="password.valid || password.pristine" class="alert alert-danger">
+              Password is required
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="text-left">
+        <div *ngIf="passwordMatch; else notMatch" >Password Match:
+          <i class="fas fa-check"></i>
+        </div>
+        <ng-template #notMatch>
+          <div>Password Match:
+            <i class="fas fa-times"></i>
+          </div>
+        </ng-template>
+      </div>
+
+      <button type="submit" class="btn btn-success" [disabled]="!passwordMatch || !userLoginForm.form.valid">Submit</button>
+      <h2 class="font-weight-light">{{serverResponse}}</h2>
+
+    </form>
+  </div>
+</div>
