--- a/src/app/user-dashboard/user-dashboard.component.html
+++ b/src/app/user-dashboard/user-dashboard.component.html
@@ -70,7 +70,7 @@
 
     <div class="tab-pane fade " id="myOrdersContent" role="tabpanel" aria-labelledby="home-tab">
       <div class="container text-center">
-        <div class="row" *ngIf="orders?.length > 0 ; else noOrders">
+        <div class="row" *ngIf="orders?.length > 0 ; else noOrderTemplate">
           <div class="col-6 col-md-4 pt-2 pb-2" *ngFor="let  order of orders">
             <div class="card">
               <div class="card-header text-primary" [routerLink]="['/mobilePhone', order.mobileId]">
@@ -92,7 +92,7 @@
             </div>
           </div>
         </div>
-        <ng-template #noOrders>
+        <ng-template #noOrderTemplate>
           <div class="container">
             <h5 class=display-4>No Orders placed =(</h5>
           </div>
@@ -114,7 +114,7 @@
               <div class="card-body">
                 <span class="text-primary font-weight-light ">{{item.mobilePrice}}</span>
                 <div>
-                  <a class=" btn btn-info text-white" [routerLink]="['/mobilePhone', item.mobileId]">Buy Again
+                  <a class=" btn btn-info text-white" [routerLink]="['/mobilePhone', item.mobileId]">Select mobile
                   </a>
                 </div>
               </div>
@@ -144,7 +144,7 @@
           <h2>Edit you information</h2>
 
           <div class="p-3">
-            <form (ngSubmit)="update(myUsername)" #userReLoginForm="ngForm">
+            <form (ngSubmit)="updateProfile()" #userReLoginForm="ngForm">
               <div class="form-group">
                 <label for="name">Username</label>
                 <input type="text" class="form-control" required [(ngModel)]="myUsername" name="myUsername" #username="ngModel">
