--- a/src/app/all-phones/all-phones.component.css
+++ b/src/app/all-phones/all-phones.component.css
@@ -12,6 +12,8 @@ img {
 }
 
 .card:hover{
+    
+    /* box-shadow: 0 .5rem 1rem rgba(0,0,0,.15)!important; */
     box-shadow: 0 1rem 3rem rgba(0,0,0,.175)!important;
 }
 
