--- a/src/app/best-selling/best-selling.component.html
+++ b/src/app/best-selling/best-selling.component.html
@@ -4,9 +4,9 @@
     <div class="display-4 p-2 text-center">Best Selling</div>
 
     <div class="row">
-      <div class="col" *ngFor="let phone of mobilePhones" [routerLink]="['/mobilePhone', phone.mobileId]">
+      <div class="col d-flex" *ngFor="let phone of mobilePhones" [routerLink]="['/mobilePhone', phone.mobileId]">
         <!-- Card -->
-        <div class="card">
+        <div class="card flex-fill shadow-sm">
           <!-- Card image -->
           <div class="view overlay">
             <img class="img-thumbnail" src="{{ phone.mobileImageUrl}}" alt="Card image cap">
