--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -1,6 +1,6 @@
 <nav class="navbar navbar-expand-lg sticky-top navbar navbar-dark bg-primary shadow-lg p-3">
   <div class="container">
-    <a class="navbar-brand" href="#">
+    <a class="navbar-brand"  routerLink="/home">
       Angular Store
     </a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
