--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -39,17 +39,20 @@
       </ul>
 
       <ul class="navbar-nav ml-auto">
-        <li class="nav-item dropdown" *ngIf="loginService.isLoggedIn()">
-          <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown"
-            aria-haspopup="true" aria-expanded="false">
-            {{userName}}
-          </a>
-          <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-            <a class="nav-link text-dark" routerLink="/userDashboard">My Dashboard</a>
-            <!-- <a class="nav-link text-dark" routerLink="/basket">My Basket
-              <span class="badge badge-light">{{noOfItemsInBasket}}</span></a> -->
-          </div>
-        </li>
+          <li class="nav-item dropdown" *ngIf="loginService.isLoggedIn()">
+            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown"
+              aria-haspopup="true" aria-expanded="false">
+              {{userName}}
+            </a>
+            <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+              <a class="nav-link text-dark" routerLink="/userDashboard">My Dashboard</a>
+              <!-- <a class="nav-link text-dark" routerLink="/basket">My Basket
+                <span class="badge badge-light">{{noOfItemsInBasket}}</span></a> -->
+            </div>
+          </li>
+          <li class="nav-item" *ngIf="loginService.LoggedIn">
+            <a class="nav-link" routerLink="/register">temp button</a>
+          </li>
         <li class="nav-item" *ngIf="!loginService.isLoggedIn()">
           <a class="nav-link" routerLink="/register">Register</a>
         </li>
