--- a/src/app/all-phones/all-phones.component.html
+++ b/src/app/all-phones/all-phones.component.html
@@ -56,7 +56,7 @@
               <span>{{phone.mobilePrice}}</span>
             </span>
             <span class="float-right">
-              <a [routerLink]="['/mobilePhone', phone.mobileId]" class=" btn btn-info btn-sm" ng-click="addToBasket(id,quantity,price)">
+              <a [routerLink]="['/mobilePhone', phone.mobileId]" class=" btn btn-info btn-sm">
                 <span>
                   <i class="lnr lnr-cart"></i>
                 </span> Add to Cart</a>
