Due to design flaws in Bar graph text arent aligned properly, as the  graph has to show % symbol but concatenating integer with string doesnt wrk had to into insert percentage sign in html temlate

--- a/src/app/detail-phone/detail-phone.component.css
+++ b/src/app/detail-phone/detail-phone.component.css
@@ -108,6 +108,12 @@ h1 { font-size: 1.5em; margin: 10px; }
   color: #ddd; 
  float: right; 
 }
+.customTopLine{
+  margin-top: 50px!important;
+}
+.customBottomLine{
+  margin-top: 26px!important;
+}
 
 /***** CSS Magic to Highlight Stars on Hover *****/
 
