--- a/src/app/detail-phone/detail-phone.component.html
+++ b/src/app/detail-phone/detail-phone.component.html
@@ -126,7 +126,7 @@
               </div>
             </div>
             <div class="side right">
-              <div>{{fiveStars}}</div>
+              <div>{{fiveStars}}%</div>
             </div>
             <div class="side">
               <div>4 star</div>
@@ -137,7 +137,7 @@
               </div>
             </div>
             <div class="side right">
-              <div>{{fourStars}}</div>
+              <div>{{fourStars}}%</div>
             </div>
             <div class="side">
               <div>3 star</div>
@@ -148,7 +148,7 @@
               </div>
             </div>
             <div class="side right">
-              <div>{{threeStars}}</div>
+              <div>{{threeStars}}%</div>
             </div>
             <div class="side">
               <div>2 star</div>
@@ -159,7 +159,7 @@
               </div>
             </div>
             <div class="side right">
-              <div>{{twoStars}}</div>
+              <div>{{twoStars}}%</div>
             </div>
             <div class="side">
               <div>1 star</div>
@@ -170,7 +170,7 @@
               </div>
             </div>
             <div class="side right">
-              <div>{{oneStars}}</div>
+              <div>{{oneStars}}%</div>
             </div>
           </div>
           <!-- <hr style="border:3px solid #f1f1f1"> -->
@@ -238,6 +238,7 @@
                   for="star1"></label>
               </fieldset>
             </div>
+            <hr class="customTopLine customBottonLine">
             <span>Comment</span>
             <div class="input-group">
               <div class="input-group-prepend">
